correct dark mode to off black shade

--- a/src/theme.css
+++ b/src/theme.css
@@ -1,11 +1,11 @@
 .light {
-    --theme-color: red;
+    --theme-color: FF0000;
     --theme-page-background: #FFF;
     --theme-page-text: #111;
 }
 
 .dark {
-    --theme-color: #0000A8;
-    --theme-page-background: #111;
+    --theme-color: #FF0000;
+    --theme-page-background: #282828;
     --theme-page-text: #FFF;
 }
